# irradSiPM

./: CMakeLists.txt  README.md
cfg/: irradSiPM.gps.tifpa.mac
run/: runMe.RW3.sh
src/: CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RootIO.cc  RootIO.hh  RunAction.cc  RunAction.hh  SensitiveDetector.cc  SensitiveDetector.hh  main.cc
